--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,16 +27,18 @@ header {
 
 .header-container {
   position: relative;
-  max-width: 1200px;
+  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   height: 100%;
 }
 
 .logo {
   position: absolute;
-  left: 20px;
+  left: 0;
   top: 50%;
   transform: translateY(-50%);
+  padding-left: 20px;
 }
 
 .logo img {
